# flip-bot-crypto

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  epic.md  ops.md  story.md  task.md
.github/workflows/: ci.yml
app/: main.py
app/configs/: settings.py
app/engines/tl_rider/: combos.py  decision_record.py  engine.py  selector.py
app/execution/: broker.py  money.py
app/features/: builders_core.py  builders_ob.py  builders_supertrend.py  registry.py  states.py  store.py
app/feeds/: delta_rest.py  delta_ws.py
app/observability/: logging.py  metrics.py
app/storage/: parquet_io.py  watermarks.py
docs/: FEATURES.md  SOW.md
tests/: test_smoke.py
